[fix] Attempt to Fix URL Issue

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>
-          <a class="head-link" href="/">
+          <a class="head-link" href="{{ site.url }}">
             {{ page.title | default: site.title | default: site.github.repository_name }}
           </a>
         </h1>
