--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,4 @@
+<!--source: https://github.com/pages-themes/leap-day/blob/master/_layouts/default.html-->
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
