--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,1 @@
-@import "../../node_modules/bootstrap/scss/bootstrap";
-
-@import "./light-mode";
-@import "./dark-mode";
+@import "~bootstrap/scss/bootstrap";
