--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,1 +1,40 @@
-@import "~bootstrap/scss/bootstrap";
+body {
+  padding: 0px;
+  margin: 0px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+// variables
+
+$border-radius: 8px;
+
+@import "./utils";
+
+@import "./navbar";
+@import "./page";
+@import "./list";
+
+// container
+
+.container {
+  padding: 24px;
+}
+
+// utils
+
+.border-end {
+  border-right: black solid 1px;
+}
+
+.ps-4 {
+  padding-left: space(4);
+}
+
+.pt-4 {
+  padding-top: space(4);
+}
+
+.pe-5 {
+  padding-right: space(4);
+}
