--- a/assets/css/_utils.scss
+++ b/assets/css/_utils.scss
@@ -1,3 +1,22 @@
-@function space($multiplier) {
-  @return $multiplier * 4px;
+// utils
+@import "./functions";
+
+.container {
+  padding: space(6);
+}
+
+.border-end {
+  border-right: black solid 1px;
+}
+
+.ps-4 {
+  padding-left: space(4);
+}
+
+.pt-4 {
+  padding-top: space(4);
+}
+
+.pe-5 {
+  padding-right: space(4);
 }
