--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,14 +1,21 @@
 body {
   padding: 0px;
   margin: 0px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 // variables
 
-$border-radius: 8px;
+$primary: black;
+$primary-hover: lightgray;
+$primary-text: white;
 
+$hover: lightgray;
+$border-color: darkgray;
+$border-radius: 0px;
+
+@import "./functions";
 @import "./utils";
 
 @import "./navbar";
@@ -16,25 +23,3 @@ $border-radius: 8px;
 @import "./list";
 
 // container
-
-.container {
-  padding: 24px;
-}
-
-// utils
-
-.border-end {
-  border-right: black solid 1px;
-}
-
-.ps-4 {
-  padding-left: space(4);
-}
-
-.pt-4 {
-  padding-top: space(4);
-}
-
-.pe-5 {
-  padding-right: space(4);
-}
