--- a/assets/css/components/_page.scss
+++ b/assets/css/components/_page.scss
@@ -1,7 +1,7 @@
 // commandbar
 
-@import "./functions";
-@import "./button";
+@use "../functions" as *;
+@use "./button" as *;
 
 $commandbar-height: 50px;
 
