--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,25 +1,43 @@
+// variables
+
+$primary: black !default;
+$primary-hover: lightgray !default;
+$primary-text: white !default;
+
+$hover: lightgray !default;
+$border-color: darkgray !default;
+$border-radius: 0px !default;
+
+@use "./functions";
+@use "./utils";
+@use "./defaults/colors" as default-colors;
+@use "./defaults/shapes" as default-shapes;
+
+$primary: defaults-colors.$primary !default;
+$primary-hover: defaults-colors.$primary-hover !default;
+$primary-text: defaults-colors.$primary-text !default;
+$hover: defaults-colors.$hover !default;
+$border-color: defaults-colors.$border-color !default;
+
+$border-radius: defaults-shapes.$border-radius !default;
+
+@use "./components/navbar" with ($border-color: $border-color);
+
+@use "./components/button" with (
+  $primary: $primary,
+  $primary-hover: $primary-hover,
+  $primary-text: $primary-text,
+  $border-radius: $border-radius
+);
+
+@use "./components/list" with ($border-radius: $border-radius);
+@use "./components/page";
+
 body {
   padding: 0px;
   margin: 0px;
   font-family: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
-// variables
-
-$primary: black;
-$primary-hover: lightgray;
-$primary-text: white;
-
-$hover: lightgray;
-$border-color: darkgray;
-$border-radius: 0px;
-
-@import "./functions";
-@import "./utils";
-
-@import "./navbar";
-@import "./page";
-@import "./list";
 
 // container
