--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,7 @@ $border-radius: 0px !default;
 @use "./utils";
 @use "./defaults/colors" as default-colors;
 @use "./defaults/shapes" as default-shapes;
+@use "./defaults/fonts" as default-fonts;
 
 $primary: defaults-colors.$primary !default;
 $primary-hover: defaults-colors.$primary-hover !default;
@@ -19,8 +20,11 @@ $primary-text: defaults-colors.$primary-text !default;
 $hover: defaults-colors.$hover !default;
 $border-color: defaults-colors.$border-color !default;
 
+$font-family: default-fonts.$font-family !default;
+
 $border-radius: defaults-shapes.$border-radius !default;
 
+@use "./root" with ($font-family: $font-family);
 @use "./components/navbar" with ($border-color: $border-color);
 
 @use "./components/button" with (
@@ -32,12 +36,3 @@ $border-radius: defaults-shapes.$border-radius !default;
 
 @use "./components/list" with ($border-radius: $border-radius);
 @use "./components/page";
-
-body {
-  padding: 0px;
-  margin: 0px;
-  font-family: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-// container
