--- a/assets/css/components/_navbar.scss
+++ b/assets/css/components/_navbar.scss
@@ -2,28 +2,30 @@
 
 $border-color: black !default;
 
-.navbar {
-  // background: lightgray;
-  border-bottom: $border-color solid 2px;
+@mixin styles($border-color) {
+  .navbar {
+    // background: lightgray;
+    border-bottom: $border-color solid 2px;
 
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-}
-
-.nav-link {
-  color: black;
-  text-decoration: none;
-
-  &.active {
-    color: gray;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
   }
-}
 
-.navbar-item {
-  @extend .nav-link;
+  .nav-link {
+    color: black;
+    text-decoration: none;
 
-  margin: 0px;
-  display: inline-block;
-  padding: 16px;
+    &.active {
+      color: gray;
+    }
+  }
+
+  .navbar-item {
+    @extend .nav-link;
+
+    margin: 0px;
+    display: inline-block;
+    padding: 16px;
+  }
 }
