--- a/assets/css/components/_page.scss
+++ b/assets/css/components/_page.scss
@@ -17,6 +17,8 @@
 
     height: $commandbar-height;
     background: white;
+
+    border-top: black solid 1.5px;
     border-bottom: black solid 1.5px;
 
     padding-left: 8px;
