--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,18 +13,37 @@ $default-fonts: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
 @mixin styles(
-  $primary: black,
+  // colors
+    $primary: black,
   $primary-hover: color.adjust($primary, $lightness: 20%),
   $primary-text: white,
-  $background: white,
+  $background: #fafafa,
+  $background-text: black,
   $background-hover: color.adjust($background, $lightness: -10%),
-  $border-color: gray,
-  $font-family: $default-fonts,
-  $border-radius: 0px
+  $surface: white,
+  $border-color: #e0e0e0,
+  $link-color: blue,
+  $border-width: 1.5px,
+  $border-radius: 0px,
+  /* fonts */ $font-family: $default-fonts
 ) {
-  @include root.styles($font-family: $font-family);
+  @include utils.styles(
+    $surface: $surface,
+    $border-color: $border-color,
+    $border-width: $border-width
+  );
 
-  @include navbar.styles($border-color: $border-color);
+  @include root.styles(
+    $background: $background,
+    $background-text: $background-text,
+    $link-color: $link-color,
+    $font-family: $font-family
+  );
+
+  @include navbar.styles(
+    $background-text: $background-text,
+    $border-color: $border-color
+  );
 
   @include button.styles(
     $primary: $primary,
@@ -37,6 +56,7 @@ $default-fonts: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
     $primary-hover: $primary-hover,
     $background: $background,
     $background-hover: $background-hover,
+    $background-text: $background-text,
     $border-radius: $border-radius
   );
 
@@ -44,6 +64,8 @@ $default-fonts: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
     $primary: $primary,
     $primary-hover: $primary-hover,
     $primary-text: $primary-text,
-    $border-radius: $border-radius
+    $border-color: $border-color,
+    $border-radius: $border-radius,
+    $border-width: $border-width
   );
 }
