--- a/assets/css/_root.scss
+++ b/assets/css/_root.scss
@@ -1,4 +1,13 @@
-@mixin styles($background, $background-text, $link-color, $font-family) {
+@use "./border";
+
+@mixin styles(
+  $background,
+  $background-text,
+  $link-color,
+  $border-color,
+  $border-width,
+  $font-family
+) {
   body {
     padding: 0px;
     margin: 0px;
@@ -13,5 +22,15 @@
 
   table {
     width: 100%;
+
+    @include border.border-bottom(
+      $border-color: $border-color,
+      $border-width: $border-width
+    );
+
+    @include border.border-top(
+      $border-color: $border-color,
+      $border-width: $border-width
+    );
   }
 }
