--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,8 +15,7 @@ $default-fonts: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
 @mixin styles(
-  // colors
-    $primary: black,
+  $primary: black,
   $primary-hover: color.adjust($primary, $lightness: 20%),
   $primary-text: white,
   $background: #fafafa,
@@ -27,7 +26,7 @@ $default-fonts: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
   $link-color: blue,
   $border-width: 1.5px,
   $border-radius: 0px,
-  /* fonts */ $font-family: $default-fonts
+  $font-family: $default-fonts
 ) {
   @include utils.styles(
     $surface: $surface,
@@ -39,6 +38,8 @@ $default-fonts: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
     $background: $background,
     $background-text: $background-text,
     $link-color: $link-color,
+    $border-color: $border-color,
+    $border-width: $border-width,
     $font-family: $font-family
   );
 
