--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,6 +35,8 @@ $default-fonts: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
   );
 
   @include root.styles(
+    $primary: $primary,
+    $primary-text: $primary-text,
     $background: $background,
     $background-text: $background-text,
     $link-color: $link-color,
