--- a/assets/css/components/_list.scss
+++ b/assets/css/components/_list.scss
@@ -17,18 +17,10 @@
     height: space(6);
     padding: space(2);
 
+    border-radius: $border-radius;
+
     &:hover {
       background: $background-hover;
-    }
-
-    &:first-child {
-      border-top-left-radius: $border-radius;
-      border-top-right-radius: $border-radius;
-    }
-
-    &:last-child {
-      border-bottom-left-radius: $border-radius;
-      border-bottom-right-radius: $border-radius;
     }
   }
 
