--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,21 +1,11 @@
 @use "sass:color";
 @use "./main";
+@use "./theme";
 
 .light-mode {
-  @include main.styles();
+  @include main.styles($theme: theme.default-light-theme());
 }
 
 .dark-mode {
-  $background: #212121;
-
-  @include main.styles(
-    $primary: #e0e0e0,
-    $primary-text: black,
-    $background: $background,
-    $background-hover: color.adjust($background, $lightness: 10%),
-    $background-text: white,
-    $surface: #424242,
-    $border-color: #616161,
-    $link-color: #b3e5fc
-  );
+  @include main.styles($theme: theme.default-dark-theme());
 }
