--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,7 @@
 // variables
 
 @use "sass:color";
+@use "sass:map";
 @use "./border";
 @use "./functions";
 @use "./utils";
@@ -11,39 +12,29 @@
 @use "./components/list";
 @use "./components/page";
 
-$default-fonts: "Noto Sans SC", -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+@mixin styles($theme) {
+  $primary: map.get($theme, "colors", "primary", "default");
+  $primary-hover: map.get($theme, "colors", "primary", "hover");
+  $primary-text: map.get($theme, "colors", "primary", "text");
 
-@mixin styles(
-  $primary: black,
-  $primary-hover: color.adjust($primary, $lightness: 20%),
-  $primary-text: white,
-  $background: #fafafa,
-  $background-text: black,
-  $background-hover: color.adjust($background, $lightness: -10%),
-  $surface: white,
-  $border-color: #e0e0e0,
-  $link-color: blue,
-  $border-width: 1.5px,
-  $border-radius: 0px,
-  $font-family: $default-fonts
-) {
+  $background: map.get($theme, "colors", "background", "default");
+  $background-text: map.get($theme, "colors", "background", "text");
+  $background-hover: map.get($theme, "colors", "background", "hover");
+
+  $surface: map.get($theme, "colors", "surface", "default");
+  $border-color: map.get($theme, "colors", "border", "default");
+  $link-color: map.get($theme, "colors", "link", "default");
+  $border-width: map.get($theme, "shapes", "border", "width");
+  $border-radius: map.get($theme, "shapes", "border", "radius");
+  $font-family: map.get($theme, "font", "family");
+
   @include utils.styles(
     $surface: $surface,
     $border-color: $border-color,
     $border-width: $border-width
   );
 
-  @include root.styles(
-    $primary: $primary,
-    $primary-text: $primary-text,
-    $background: $background,
-    $background-text: $background-text,
-    $link-color: $link-color,
-    $border-color: $border-color,
-    $border-width: $border-width,
-    $font-family: $font-family
-  );
+  @include root.styles($theme: $theme);
 
   @include text-align.styles();
   @include border.styles(
