--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,10 @@
 
 @layer base {
   .dark body {
-    @apply bg-gray-800;
+    @apply bg-background-800;
+  }
+
+  .light body {
+    @apply bg-background-100;
   }
 }
