[feat] Minor Improvement to Styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,11 @@
     @apply pl-4;
   }
 
+  ol {
+    @apply list-decimal;
+    @apply pl-6;
+  }
+
   table {
     @apply w-full;
     @apply border-collapse;
