[feat] Enable Pointer Cursor on Tags, Remove <button> Tag from Anchors

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -36,7 +36,12 @@ body {
 }
 
 a {
-  @include link.clear-link-styles();
+  all: unset;
+  cursor: pointer;
+}
+
+button {
+  all: unset;
 }
 
 table {
