--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,24 +1,12 @@
 @use "./link" as link;
 @use "./colors" as colors;
 
-html {
-  --cooking-primary: #17853f;
-  --cooking-primary-active: #22c55e;
-  --cooking-primary-text: white;
-  --cooking-background: #f4f4f5;
-  --cooking-text: black;
-
-  &.dark {
-    --cooking-background: #27272a;
-    --cooking-text: white;
-  }
-}
-
 body {
   margin: 0;
   padding: 0;
 
-  background: var(--cooking-background);
+  color: var(--cooking-text);
+  background-color: var(--cooking-background);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -56,7 +44,7 @@ th {
 
 tr:nth-child(odd) {
   background: lightgray;
-  color: colors.$black;
+  color: var(--cooking-black);
 }
 
 td {
