[fix] Add focus style to tag.

--- a/assets/css/_colors.scss
+++ b/assets/css/_colors.scss
@@ -1,6 +1,7 @@
 :root {
   --cooking-primary: #17853f;
   --cooking-primary-active: #22c55e;
+  --cooking-primary-focus: #22c55e;
   --cooking-primary-text: white;
   --cooking-background: #f4f4f5;
   --cooking-text: black;
